# logsmith

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Makefile  README.md  pyproject.toml
.github/workflows/: ci.yml
docs/: benchmarks.md  faq.md
docs/guides/: async.md  cloud-providers.md  correlation.md  error-context.md  filters.md  formatters.md  handlers.md  integrations.md  json-output.md  kubernetes.md  metrics.md  multi-output.md  performance.md  redaction.md  sampling.md  structured-context.md  testing.md
logsmith/: __init__.py  async_context.py  compat.py  rate_limit.py  redact.py  sampling.py
logsmith/integrations/: datadog.py  fastapi.py  opentelemetry.py  sentry.py
tests/: test_core.py  test_formatters.py  test_rate_limit.py  test_redact.py  test_sampling.py
