[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.backends.legacy:build"

[project]
name = "logsmith"
version = "0.1.0"
description = "Zero-config structured logging for Python"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [{name = "Ali Pourrahim"}]
keywords = ["logging", "structured-logging", "json", "observability", "fastapi"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: System :: Logging",
]
dependencies = []

[project.optional-dependencies]
fastapi = ["fastapi>=0.100", "starlette>=0.27"]
dev = ["pytest>=7", "pytest-cov", "ruff", "mypy", "build", "twine"]

[tool.ruff]
line-length = 100
select = ["E", "F", "I"]

[tool.mypy]
python_version = "3.11"

[tool.pytest.ini_options]
testpaths = ["tests"]
